Bug 116628 - Help -> Content folders cannot be navigated by mouse but only by keyboard.
Summary: Help -> Content folders cannot be navigated by mouse but only by keyboard.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-03-25 20:42 UTC by Hussam Al-Tayeb
Modified: 2018-04-06 08:12 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hussam Al-Tayeb 2018-03-25 20:42:46 UTC
Description:
In master branch (6.1.0.0 alpha), Help -> Content folders cannot be navigated by mouse but only by keyboard.
This works perfectly in libreoffice-6-0 branch.


Steps to Reproduce:
- Open help viewer, press on "Contents" tab and click/double click on "Formulas"

Actual Results:  
- Formulas (folder) does not expand.

Expected Results:
- Formulas (folder) should expand.


Reproducible: Always


User Profile Reset: No



Additional Info:


User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:60.0) Gecko/20100101 Firefox/60.0
Comment 1 Xavier Van Wijmeersch 2018-03-26 19:24:45 UTC
confirm

Version: 6.1.0.0.alpha0+
Build ID: 975884fbbc3f80a634258ee562037688a42027a9
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: nl-BE (en_US.UTF-8); Calc: group

Version: 6.1.0.0.alpha0+
Build ID: 1fbe46cf08f525e78016feef83f4c38b79b337ba
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-03-24_23:04:38
Locale: nl-BE (en_US.UTF-8); Calc: group
Comment 2 Cor Nouws 2018-04-04 19:28:34 UTC
@kendy ??
Comment 3 Xisco Faulí 2018-04-05 16:36:15 UTC Comment hidden (obsolete)
Comment 4 Xisco Faulí 2018-04-05 16:42:03 UTC
My previous comment was wrong, I can reproduce it in

Version: 6.1.0.0.alpha0+
Build ID: 7e92a996d1588bdf2ff1e2df10220a0f57686cfb
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 5 Xisco Faulí 2018-04-05 16:50:13 UTC
Regression introduced by:

author	Jan Holesovsky <kendy@collabora.com>	2018-03-01 12:13:53 +0100
committer	Jan Holesovsky <kendy@collabora.com>	2018-03-01 15:41:13 +0100
commit 7651e57573952758032ceb88f16e2dbbb6cc4e18 (patch)
tree f27c232b2213d534999dbaa96af41f350e20351c /svtools/source/contnr/treelistbox.cxx
parent a4ed3d9a1ffa1b51ba4352a955c950235f099fdc (diff)
tdf#115950: Indicate that the dialog was already destroyed.
The DoubleClickHdl()'s return value does not mean "was handled", but actually
"is there anything more to be done"; so if we actually destroy the dialog in
the aDoubleClickHdl.Call(this), we have to return 'false

Reverted locally.

Adding Cc: to Jan Holesovsky

probably the solution will be similar to https://cgit.freedesktop.org/libreoffice/core/commit/svtools/source/contnr/treelistbox.cxx?id=1b9af08481b8f7f4bd15a30508606dff56b8e74f
Comment 6 Jan Holesovsky 2018-04-05 17:12:58 UTC
More probably like

https://cgit.freedesktop.org/libreoffice/core/commit/?id=3af6be55ae1dabb1b72cbb4c57cca33c28b347f8

:-)  Looking into this...
Comment 7 Xisco Faulí 2018-04-05 17:16:46 UTC
(In reply to Jan Holesovsky from comment #6)
> More probably like
> 
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=3af6be55ae1dabb1b72cbb4c57cca33c28b347f8
> 
> :-)  Looking into this...

Yep, that's the one I reverted locally.
Comment 8 Commit Notification 2018-04-06 08:10:54 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=36ad635381f9ea297bfbc6ed3e171ec8a5f0f785

tdf#116628: Fix expanding the entries in Help's Contents tab.

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Jan Holesovsky 2018-04-06 08:12:43 UTC
Fixed now; I wonder how could we catch all the other potential cases we did not get reports about yet...