tdf#116628: Fix expanding the entries in Help's Contents tab.

Change-Id: I50627ca577bf89810c716bf9e1db9ae74cec58d1
Reviewed-on: https://gerrit.libreoffice.org/52473
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Jan Holesovsky <kendy@collabora.com>